# colour-palette

./: .dockerignore  .gitignore  Dockerfile  README.md  cmpt383.md  docker-compose.yml
client/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
client/public/: manifest.json
client/src/: App.js  ColourPalettePage.jsx  index.css
client/src/components/: Colour.jsx  ColourPalette.jsx  Colours.jsx  FileSelector.jsx  ImageFile.jsx  ImageLink.jsx  ImageSelect.jsx  Navbar.jsx  Palette.jsx  PalettePreview.jsx  Results.jsx  UserForm.jsx
client/src/pages/: CreatePalettePage.jsx  LoginPage.jsx  Palette.jsx  PalettePage.jsx  PalettesPage.js  RegisterPage.jsx  SavedPalettesPage.js  SavedPalettesPage.jsx  TestPage.jsx  ViewPalettePage.jsx
client/src/services/: api.js
client/src/styles/: StyledComponents.js  Theme.jsx
db/: init.sql
quantize/src/: lib.rs  quantize.rs
rust/: Cargo.toml
server/: .dockerignore  Dockerfile  hello.py  requirements.txt
server/api/: __init__.py  config.py  models.py
server/api/blueprints/: auth.py  palette.py
server/app/: __init__.py  colour_quantization.py
server/app/blueprints/: palette.py
server/quantize/: Cargo.toml
